--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Traitor-s-Choice_66753
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66753-h/images/cover.jpg
 creator:
   author:
     agent_name: Fairman, Paul W.
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/9567
     wikipedia: https://www.gutenberg.org/ebooks/author/53466
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66753#Traitor-s-Choice
 gutenberg_issued: '2021-11-16'
 identifiers:
   gutenberg: '66753'
